# Predictive-ML-in-TTRPG-game-design

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  tmp.py
dataset/: books_with_dates.csv  constants.py  creating_dataset.py  save_monsters_to_books_files.py  save_preprocessed_bestiaries.py  society.csv  splitting_dataset.py
notebooks/: linear_regression_full.ipynb
pathfinder_2e_remaster_data/: abomination-vaults-bestiary.json  age-of-ashes-bestiary.json  agents-of-edgewatch-bestiary.json  blog-bestiary.json  blood-lords-bestiary.json  book-of-the-dead-bestiary.json  crown-of-the-kobold-king-bestiary.json  extinction-curse-bestiary.json  fists-of-the-ruby-phoenix-bestiary.json  gatewalkers-bestiary.json  impossible-lands-bestiary.json  malevolence-bestiary.json  menace-under-otari-bestiary.json  monsters-of-myth-bestiary.json  night-of-the-gray-death-bestiary.json  npc-gallery.json  old_gatewalkers-bestiary.json  one-shot-bestiary.json  outlaws-of-alkenstar-bestiary.json  pathfinder-dark-archive.json  pfs-introductions-bestiary.json  pfs-season-1-bestiary.json  pfs-season-2-bestiary.json  pfs-season-3-bestiary.json  pfs-season-4-bestiary.json  quest-for-the-frozen-flame-bestiary.json  the-slithering-bestiary.json  travel-guide-bestiary.json  troubles-in-otari-bestiary.json
preprocessed_bestiaries/: bestiaries_basic.csv  bestiaries_expanded.csv  bestiaries_full.csv  bestiaries_reduced.csv
test/: constants.py  test_create_model.py  test_creating_dataset.py  test_splitting_dataset.py
training/: books_with_dates.csv  calculate_metrics_from_files.py  cem.py  confusion_matrix.py  constants.py  create_model.py  creating_dataset.py  evall_result.py  evaluate.py  losses.py  metrics.py  ordered_models.py  ordinal_classification_format.py  ordinal_nn_model.py  (+15 more)
(+439 files in other folders)
