[tool.poetry]
name = "Predictive-ML-in-TTRPG-game-design"
version = "0.1.0"
description = "Project: Application of predictive machine learning in pen & paper RPG game design"
authors = [
    "Jolanta Śliwa <>"
]

[tool.poetry.dependencies]
python = "3.10.*"

lightgbm = "3.3.*"
numpy = "1.24.*"
optuna = "3.3.*"
pandas = "1.4.*"
pydantic = "1.10.*"
scikit-learn = "1.2.*"

[tool.poetry.group.style.dependencies]
pre-commit = "2.20.*"

[tool.poetry.group.test.dependencies]
pytest = "7.1.*"

[tool.poetry.group.notebooks.dependencies]
jupyter = "1.0.*"
matplotlib = "3.8.*"

# poetry export --without-hashes --format=requirements.txt --with="style,test,notebooks" --output=requirements.txt
