[tool.poetry]
name = "Predictive-ML-in-TTRPG-game-design"
version = "0.1.0"
description = "Project: Application of predictive machine learning in pen & paper RPG game design"
authors = [
    "Jolanta Śliwa <>"
]

[tool.poetry.dependencies]
python = "3.10.*"

lightgbm = "3.3.*"
numpy = "1.24.*"
optuna = "3.3.*"
pandas = "2.2.2"
pydantic = "1.10.*"
scikit-learn = "1.3.*"
orf = "0.2.*"
mizani = "0.9.*"  # orf dependencies
mord = "0.7.*"
#gpflow = "2.9.*"  # TODO: Package 'tensorflow-macos' is listed as a dependency of itself.
# for Simple approach to OR: !git clone https://github.com/mosh98/Ordinal_Classifier.git

[tool.poetry.group.style.dependencies]
pre-commit = "2.20.*"

[tool.poetry.group.test.dependencies]
pytest = "7.1.*"

[tool.poetry.group.notebooks.dependencies]
jupyter = "1.0.*"
matplotlib = "3.5.*"  # orf dependencies

# poetry lock --no-update
# poetry export --without-hashes --format=requirements.txt --with="style,test,notebooks" --output=requirements.txt
